# tech-lead-notes

./: .gitignore  LICENSE  README.md  context7.json  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml
.github/workflows/: gh-pages.yml  monthly-refresh.yml
.playwright-mcp/: page-2026-04-28T20-44-24-555Z.yml  page-2026-04-28T20-46-50-230Z.yml
docs/: agent-index.md  index.md  llms.txt  sources.md
docs/distilled/: about.md  cross-references.md  glossary.md  index.md
docs/distilled/dora-metrics-jira/: 01-dora-fundamentals.md  02-ticket-discipline.md  03-github-side.md  04-jira-setup-checklist.md  05-anti-patterns.md  index.md
docs/distilled/kanban-guide/: 01-three-practices-and-dow.md  02-flow-metrics.md  03-when-to-use.md  index.md
docs/recipes/: 01-pr-review-with-dora.md  02-sprint-review-prep.md  03-build-buy-rent-outsource.md  04-pick-a-method.md  05-incident-postmortem.md  06-team-org-redesign.md  07-stakeholder-map.md  08-strategic-review.md  09-forecasting-and-sle.md  10-onboarding.md  11-ai-in-dev-workflow.md  index.md
overrides/: main.html
raw-sources/: dora-metrics-jira.md  kanban-guide.md  micro-p3-express.md  nupp.md  open-guide-to-kanban.md  p3-express.md  pmbok-guide--underneath-the-surface.md  scrum-guide-expanded.md  scrum-guide.md  wardley-maps.md
scripts/: build_llms_txt.py  ingest_kanban_guide.py  ingest_micro_p3_express.py  ingest_nupp.py  ingest_open_kanban_guide.py  ingest_p3_express.py  ingest_scrum_guide.py  ingest_scrum_guide_expanded.py  ingest_wardley_maps.py  split_book.py  split_dora_metrics.py
scripts/lib/: web_to_md.py
(+368 files in other folders)
